# gameserver

./: .gitmodules  CMakeLists.txt
cli/: CMakeLists.txt
cli/include/: PacketWrapper.h  SerializationWrapper.h  TcpClientManager.h  TcpClientNative.h  TcpClientWrapper.h
cli/src/: PacketWrapper.cpp  SerializationWrapper.cpp  TcpClientManager.cpp  TcpClientNative.cpp  TcpClientWrapper.cpp
client/: CMakeLists.txt
client/src/: main.cpp
common/: CMakeLists.txt
common/include/: EventBus.h  Global.h  ObjectPool.h  Packet.h  Serialization.h  Session.h  TcpClient.h  TcpServer.h  TestPacket.h  UdpServer.h
common/src/: Global.cpp  Packet.cpp  Session.cpp  TcpClient.cpp  TcpServer.cpp  UdpServer.cpp
db/: CMakeLists.txt
db/include/: MySql.h  MySqlClient.h  MySqlResult.h
db/src/: MySql.cpp  MySqlClient.cpp  MySqlResult.cpp
packets/: packets.proto
packets/include/: packets.pb.h
packets/src/: packets.pb.cc
server/: CMakeLists.txt  server.vcxproj
server/include/: ChatServer.h  Config.h  DatabaseServer.h  LobyServer.h  PacketDataTypes.h  PacketTypes.h  Resources.h
server/src/: ChatServer.cpp  DatabaseServer.cpp  LobyServer.cpp  PacketDataTypes.h  Resources.cpp  main.cpp
server/x64/Debug/: server.exe.recipe  server.ilk  vc143.idb
server/x64/Debug/server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  server.lastbuildstate
